v0.4.6.7 preview release